<resources>
    <!-- Title Screen -->
    <string name="app_name">Simm City</string>
    <string name="author">By Kristian Rados</string>

    <string name="start_button">Start New Game</string>
    <string name="resume_button">Resume Game</string>
    <string name="restart_button">Restart Game</string>
    <string name="settings_button">Settings</string>

    <string name="settings_error">You cannot change the settings for a running game</string>


    <!-- Settings Screen -->
    <string name="settings">Settings</string>
    <string name="default_button">Reset to Default</string>

    <string name="city_name">City Name </string>
    <string name="map_width">Map Width</string>
    <string name="map_height">Map Height</string>
    <string name="initial_money">Initial Money</string>
    <string name="tax_rate">Tax Rate</string>

    <string name="map_width_value">%d</string>
    <string name="map_height_value">%d</string>
    <string name="initial_money_value">%d</string>
    <string name="tax_rate_value">%.2f</string>

    <string name="city_name_error">Must enter a city name</string>
    <string name="city_name_length_error">Entered city name is too long</string>
    <string name="map_width_error">Map width must be a positive integer</string>
    <string name="map_height_error">Map height must be a positive integer</string>
    <string name="initial_money_error">Initial money must be a non-negative integer</string>
    <string name="tax_rate_error">Tax rate must be a decimal number between 0.0 and 1.0</string>


    <!-- Game Screen -->
    <string name="population">Population: %d</string>
    <string name="money">Treasury: $%d</string>
    <string name="day">Day %d</string>
    <string name="next_day_button">Next Day</string>
    <string name="last_income">Yesterday: %c$%d</string>
    <string name="employment">%.1f%% Employment</string>
    <string name="employment_undefined">No people to employ!</string>
    <string name="temperature">%.1f°C</string>
    <string name="temperature_not_found">\? °C</string>

    <string name="demolish_label">Demolish</string>
    <string name="details_label">Details</string>

    <string name="cannot_demolish_road_error">You must demolish any adjacent structures first</string>
    <string name="space_occupied_error">There is already a structure built here</string>
    <string name="not_enough_money_error">You need more money to build that</string>
    <string name="no_road_error">Buildings must be built adjacent to roads</string>
    <string name="not_buildable_error">Buildings cannot be built over water</string>

    <string name="game_over">You ran out of money!\nGAME OVER</string>


    <!-- Details Screen -->
    <string name="structure_name">Name</string>
    <string name="coordinates">Coordinates</string>

    <string name="road">Road</string>
    <string name="residential">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="coordinates_value">Row %d, Col %d</string>
    <string name="structure_name_error">Must enter a structure name</string>

    <string name="thumbnail_button">Take Thumbnail</string>
    <string name="back_button">Back</string>
</resources>