<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cityInfoConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#EAEAEA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cityNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temperatureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:text="@string/temperature"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/populationText"
            app:layout_constraintStart_toEndOf="@+id/dayText" />

        <TextView
            android:id="@+id/populationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/population"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityNameText" />

        <TextView
            android:id="@+id/dayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/populationText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/moneyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money"
        app:layout_constraintBottom_toTopOf="@+id/lastIncomeText"
        app:layout_constraintStart_toStartOf="@+id/lastIncomeText"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Treasury: $1000000" />

    <TextView
        android:id="@+id/lastIncomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/last_income"
        app:layout_constraintBottom_toTopOf="@+id/employmentText"
        app:layout_constraintStart_toEndOf="@+id/cityInfoConstraint"
        app:layout_constraintTop_toBottomOf="@+id/moneyText"
        tools:text="Yesterday: +$123000" />

    <TextView
        android:id="@+id/employmentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employment"
        app:layout_constraintBottom_toBottomOf="@+id/cityInfoConstraint"
        app:layout_constraintStart_toStartOf="@+id/lastIncomeText"
        tools:text="67% Employment" />

    <Button
        android:id="@+id/nextDayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/next_day_button"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cityInfoConstraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cityInfoConstraint" />
</androidx.constraintlayout.widget.ConstraintLayout>