<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <EditText
        android:id="@+id/structureNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:ems="7"
        android:hint="@string/road"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        app:layout_constraintBottom_toBottomOf="@+id/structureNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/structureNameText"
        app:layout_constraintTop_toTopOf="@+id/structureNameText" />

    <TextView
        android:id="@+id/typeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/residential"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/coordinatesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coordinatesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/coordinates"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/coordinatesValues"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/structureNameText" />

    <Button
        android:id="@+id/thumbnailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/thumbnail_button"
        app:layout_constraintBottom_toTopOf="@+id/structureImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatesText" />

    <TextView
        android:id="@+id/structureNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/structure_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatesText"
        app:layout_constraintEnd_toStartOf="@+id/structureNameInput"
        app:layout_constraintStart_toStartOf="@+id/coordinatesText"
        app:layout_constraintTop_toBottomOf="@+id/typeText" />

    <TextView
        android:id="@+id/coordinatesValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coordinates_value"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/coordinatesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coordinatesText"
        app:layout_constraintTop_toTopOf="@+id/coordinatesText" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/structureImage" />

    <ImageView
        android:id="@+id/structureImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbnailButton"
        tools:srcCompat="@drawable/ic_building1" />

</androidx.constraintlayout.widget.ConstraintLayout>